<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee">

    <RelativeLayout
        android:id="@+id/rl_registeractivity_top"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/color_minefragment_top">

        <ImageView
            android:id="@+id/iv_register_back"
            android:layout_width="16dp"
            android:layout_height="17dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:background="@drawable/ic_left_back" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_register_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_registeractivity_top"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">
        <!-- 第一个文本编辑框  输入用户名 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_register_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_username" />

            <EditText
                android:id="@+id/et_register_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:hint="@string/register_input_username"
                android:inputType="text" />
        </LinearLayout>
        <!-- 第二个文本编辑框  输入密码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_register_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="密    码：" />

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:hint="@string/register_input_password"
                android:inputType="textPassword" />
        </LinearLayout>
        <!-- 第三个文本编辑框  再次输入密码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_register_password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="密    码：" />

            <EditText
                android:id="@+id/et_register_passwordAgain"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:hint="@string/register_input_passwordAgain"
                android:inputType="textPassword" />
        </LinearLayout>
        <!-- 验证码部分 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">
            <!-- 第四个文本编辑框  输入验证码 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_register_phoneCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_phoneCode" />

                <EditText
                    android:id="@+id/et_register_phoneCode"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="3"
                    android:hint="@string/register_input_phoneCode" />

                <Button
                    android:id="@+id/bt_register_send"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="-10dp"
                    android:layout_weight="1.5"
                    android:text="@string/bt_send"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <!--
             RadioButton 要想实现多选一的效果必须放到RadioGroup 中,否则无法实现多选一的效果.
             技巧:要面向RadioGroup 编程,不要面向RaidoButton 编程,否则将增加很大代码量
             android:orientation="vertical":执行按钮组的方向,默认值是vertical.
             RadioGroup的父类时LinearLayout,但方向的默认值不再是线性布局的水平方向了,而是改成了垂直方向.
             -->
            <RadioGroup
                android:id="@+id/radioGroup_identity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/rb_register_userIdentity_parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:checked="true"
                    android:text="@string/register_userIdentity1" />
                <RadioButton
                    android:id="@+id/rb_register_userIdentity_kinderGarden"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:checked="false"
                    android:text="@string/register_userIdentity2" />
            </RadioGroup>
        </LinearLayout>
        <!-- 注册按钮 -->
        <Button
            android:id="@+id/bt_register_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/selector_loginactivity_button"
            android:text="@string/bt_register"
            android:textColor="#fff" />

    </LinearLayout>

</RelativeLayout>
