<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    tools:context="ui.LoginActivity">
    <!--
    整体是相对布局，
    在整体上方放三个东西，这三个东西也是相对布局
    合在一起称为一个top
    一个返回箭头   ←
    两个文字显示   登录  注册
    也就是说   login界面的上方长这个样子
          ←   登录       注册
    下面是具体代码
    -->
    <RelativeLayout
        android:id="@+id/rl_loginactivity_top"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/color_minefragment_top" >

        <TextView
            android:id="@+id/tv_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_register"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"/>
    </RelativeLayout>
    <!--
     顶部三个东西摆放好之后
     就该来摆放登录时候的两个文本输入框了
     用户名
     密码
     这个明显的是LinerLayout
     LinerLayout必须指明orientation 方向 要么垂直vertical 要么水平 horizontal
     这里显然是垂直vertical
     -->
    <LinearLayout
        android:id="@+id/ll_loginActivity_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/rl_loginactivity_top"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_login_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_username"/>
            <EditText
                android:id="@+id/et_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_phone"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_login_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="密    码："/>
            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:inputType="textPassword"/>
        </LinearLayout>
    </LinearLayout>
    <!--
      填好用户名、密码后，就该点击登录按钮了
      注意最后有一句： android:onClick="onClick"
      这是应用了一个开源库，详细信息在loginActivity.java 中有注释
      -->
    <Button
        android:id="@+id/bt_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_loginActivity_two"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/selector_loginactivity_button"
        android:text="@string/bt_login"
        android:textColor="#fff"
        android:gravity="center" />



</RelativeLayout>